argocd/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/instance: code-server
#  annotations:
#    kubernetes.io/tls-acme: "true"
spec:
#  tls:
#    - hosts:
#        - example.com
#      secretName: code-server
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8080
